ubiquity (1.99.29) UNRELEASED; urgency=low

  * Use a separate PROGRESS REGION for each install plugin (LP: #438979).
  * GTK frontend:
    - When switching language, translate other top-level widgets (dialogs)
      and their children, as well as the main notebook pages.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 30 Sep 2009 15:17:22 +0100

ubiquity (1.99.28) karmic; urgency=low

  * Automatic update of included source packages: partman-auto-loop
    0ubuntu18.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 29 Sep 2009 22:15:58 +0100

ubiquity (1.99.27) karmic; urgency=low

  * Emit starting-dm in the ubiquity and oem-config upstart jobs.
    Thanks Colin Watson!

 -- Evan Dandrea <evand@ubuntu.com>  Tue, 29 Sep 2009 16:05:31 +0100

ubiquity (1.99.26) karmic; urgency=low

  * Disable the intro message in preparation for Ubuntu 9.10 beta.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 28 Sep 2009 22:36:21 +0100

ubiquity (1.99.25) karmic; urgency=low

  * d-i/get-sources: Clear Dir::Etc::sourceparts, so that any local
    /etc/apt/sources.list.d/ isn't used.
  * Cope with the possibility that /etc/init.d/usplash may not exist, in
    anticipation of usplash switching to Upstart jobs.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 28 Sep 2009 13:11:44 +0100

ubiquity (1.99.24) karmic; urgency=low

  * Reorganise clock handling. The system wall clock is now set as early as
    possible, and not reset after partitioning; and the timezone and
    hardware clock configuration are now changed in the live filesystem root
    as well as in /target (LP: #431786).
  * Update translations from Launchpad.

 -- Colin Watson <cjwatson@ubuntu.com>  Sun, 27 Sep 2009 17:50:22 +0100

ubiquity (1.99.23) karmic; urgency=low

  [ Evan Dandrea ]
  * Add missing definition of self.controller for the noninteractive
    page in the language plugin.

  [ Colin Watson ]
  * Use an explicit state file to determine whether oem-config runs, since